tests/lean/structure_segfault.lean
universes u

namespace ex

structure group (α : Type u) : Type u

structure T (α : extends group α := ()

structure ring (α : Type u) : Type u

class T (α : Type*) extends ring x α

class S (α : Type*) extends ((λ x, group x) α)

end ex
